--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,6 @@ NODE_ENV=development
 # VITE_BASE_URL=http://api.dpcq.love/api
 # VITE_BASE_URL=https://os.dpcq.club/api
 VITE_BASE_URL=api
+
+# 谷歌key
+VITE_GOOGLE_KEY=6LckLYIrAAAAAOtg8z5URMAG-4MFAj3iE99o5CgK
