--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,9 @@
 # 生产环境
 NODE_ENV=production
 # 默认请求地址
-VITE_BASE_URL=https://admin.dpcq.club/api
-# VITE_BASE_URL=https://test-os.dpcq.club/api
+# VITE_BASE_URL=https://admin.dpcq.club/api
+VITE_BASE_URL=https://test-os.dpcq.club/api
 
 # 谷歌key
-VITE_GOOGLE_KEY=6LeAgY4rAAAAAD8v4scYcgKIlVtI36BhFI9E6epg
-# VITE_GOOGLE_KEY=6LckLYIrAAAAAOtg8z5URMAG-4MFAj3iE99o5CgK
+# VITE_GOOGLE_KEY=6LeAgY4rAAAAAD8v4scYcgKIlVtI36BhFI9E6epg
+VITE_GOOGLE_KEY=6LckLYIrAAAAAOtg8z5URMAG-4MFAj3iE99o5CgK
